# hcaptcha-solver-api

./: README.md  app.json  app.py  debug.py  pyproject.toml  requirements.txt  solver.py
solver/: solve.py
solver/hsolver/: __init__.py  logger.py  predict.py
solver/hsolver/hcaptcha/: a.py  challenges.py  challengess.py  controller.py  startup.py
solver/hsolver/hcaptcha/proofs/: hsw.py
