[tool.poetry]
name = "carbon-api"
version = "0.1.0"
description = ""
authors = ["FaisalSayed1 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-cors = "^3.0.10"
pyppeteer = "^0.2.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
